kubernetes/namespace-dev.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-dev
  labels:
    environment: dev
    app: ecommerce-microservice
