kubernetes/namespace-prod.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-prod
  labels:
    environment: prod
    app: ecommerce-microservice
