kubernetes/namespace-stage.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-stage
  labels:
    environment: stage
    app: ecommerce-microservice
